Use ZGC for hybrid profile on Java 21+